--- a/package.json
+++ b/package.json
@@ -5,25 +5,43 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack --mode development -w",
+    "build:assets": "WEBPACK_ENV=production webpack"
   },
   "author": "najeong park",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.12.10",
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "pug": "^3.0.0"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
+    "pug": "^3.0.0",
+    "sass": "^1.32.7"
   },
   "devDependencies": {
+    "autoprefixer": "^10.0.0",
+    "css-loader": "^4.3.0",
+    "postcss-loader": "^4.0.2",
+    "sass-loader": "^10.0.2",
+    "mini-css-extract-plugin": "^0.11.2",
+    "postcss": "^8.0.5",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.1.0",
@@ -31,5 +49,8 @@
     "eslint-plugin-prettier": "^3.3.0",
     "nodemon": "^2.0.5",
     "prettier": "^2.2.1"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
