--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.1.1",
     "mongoose": "^5.11.7",
     "morgan": "^1.10.0",
